# rag-platform

./: README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/ingestion/: chunker.py  loader.py  pipeline.py
app/retrieval/: embedder.py  retriever.py  vector_store.py
app/services/: guardrails.py  llm.py  prompt.py  rag_service.py
data/: sample.txt
vector_store/: index.faiss  store.pkl
